--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+psycopg2==2.8.6
 SQLAlchemy==1.3.23
 uuid==1.30
 Werkzeug==1.0.1
